--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1630,3 +1630,12 @@ input, select, textarea {
 		  -webkit-transform: translateX(-110%);
 		          transform: translateX(-110%);
 		}
+
+@media screen and (max-width: 480px) {
+
+			#main article {
+				padding: 3rem 1.5rem 0.5rem 1.5rem ;
+				width: 100vw;
+				height: 100vh;
+			}
+		}
