--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1161,11 +1161,6 @@ input, select, textarea {
 		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
 		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out, opacity 0.325s ease-in-out;
-		background-image: -moz-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		max-width: 100%;
 		text-align: center;
 
 	}
@@ -1207,6 +1202,7 @@ input, select, textarea {
 			object-fit: cover;
 			overflow: hidden;
 		}
+
 .logo img {
 	max-height: 100%;
 	max-width: 100%;
@@ -1232,6 +1228,13 @@ input, select, textarea {
 				padding: 3rem 2rem;
 				max-height: 40rem;
 				overflow: hidden;
+
+				background: rgb(0,0,0);
+background: -moz-radial-gradient(circle, rgba(0,0,0,0.15) 55%, rgba(0,0,0,0) 90%);
+background: -webkit-radial-gradient(circle, rgba(0,0,0,0.15) 55%, rgba(0,0,0,0) 90%);
+background: radial-gradient(circle, rgba(0,0,0,0.15) 55%, rgba(0,0,0,0) 90%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+
 			}
 
 				#header .content .inner > :last-child {
@@ -1241,8 +1244,10 @@ input, select, textarea {
 			#header .content p {
 				text-transform: uppercase;
 				letter-spacing: 0.2rem;
-				font-size: 0.8rem;
+				font-size: .8rem;
 				line-height: 2;
+				text-shadow: .5px .5px .333px #000;
+
 			}
 
 		#header nav ul {
@@ -1255,6 +1260,7 @@ input, select, textarea {
 			padding-left: 0;
 			border: solid 1px #ffffff;
 			border-radius: 4px;
+			background: rgba(0, 0, 0, 0.1);
 		}
 
 			#header nav ul li {
@@ -1279,7 +1285,7 @@ input, select, textarea {
 				}
 
 					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.075);
+						background-color: rgba(255, 255, 255, 0.15);
 					}
 
 					#header nav ul li a:active {
@@ -1456,9 +1462,10 @@ input, select, textarea {
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background-color: rgba(27, 31, 34, 0.85);
+			background-color: rgba(27, 31, 34, 0.9);
 			border-radius: 4px;
 			opacity: 0;
+			height: 100%;
 		}
 
 			#main article.active {
@@ -1467,6 +1474,8 @@ input, select, textarea {
 				-ms-transform: translateY(0);
 				transform: translateY(0);
 				opacity: 1;
+				height: 100%;
+				max-width: 100vw;
 			}
 
 			#main article .close {
@@ -1539,7 +1548,9 @@ input, select, textarea {
 }
 
 
-
+.divider {
+	text-align: center;
+}
 
 /* Footer */
 
@@ -1582,6 +1593,7 @@ input, select, textarea {
 		.slide-horizontal .char:after {
 		  visibility: visible;
 		  color: #FFF;
+			text-decoration: underline;
 		  transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
 		  transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
 		  transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1), -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
@@ -1592,12 +1604,14 @@ input, select, textarea {
 		.slide-horizontal .char {
 		  overflow: hidden;
 		  color: transparent;
+			text-decoration: underline;
 		}
 
 		.slide-horizontal .char:before,
 		.slide-horizontal .char:after {
 		  visibility: visible;
 		  color: #FFF;
+			text-decoration: underline;
 		  transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
 		  transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
 		  transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1), -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
@@ -1606,7 +1620,8 @@ input, select, textarea {
 
 		.slide-horizontal .char:before {
 		  color: #08fcd7;
-			text-shadow: 2px 2px 3px rgba(254,11,86,.999);
+			text-decoration: underline;
+			text-shadow: 3.33px 1.5px 1.5px rgba(254,11,86,.999);
 		  transition-delay: calc( 0.02s * ( var(--char-index)) );
 		}
 
@@ -1630,3 +1645,23 @@ input, select, textarea {
 		  -webkit-transform: translateX(-110%);
 		          transform: translateX(-110%);
 		}
+
+
+
+			@media screen and (max-width: 480px) {
+
+					#main article.active {
+					padding: 3rem 1.5rem 0.5rem 1.5rem;
+					max-width: 90vw;
+					height: 100%;
+					opacity: 1;
+					height: 100%;
+					max-width: 100vw;
+				}
+			}
+			@media screen and (max-width: 480px) {
+
+					#main article.active .major {
+					max-width: 100%;
+				}
+			}
