--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1673,7 +1673,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endCo
 		.split-it .char:before,
 		.split-it .char:after {
 		  visibility: visible;
-		  color: #8f8f8f;
+		  color: #ececec;
 			text-shadow: 0px .5px 1px rgba(33,33,33,.5);
 
 		}
