--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,7 +190,7 @@ input, select, textarea {
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			border-bottom: solid 1px #ffffff;
+			border-bottom: solid 1.333px rgba(254,11,86,.9);
 			width: -moz-max-content;
 			width: -webkit-max-content;
 			width: -ms-max-content;
