--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1583,6 +1583,26 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endCo
 			font-weight:900;
 		}
 
+
+.bigCool {
+	color: #08fcd7;
+	font-size: 1.5em;
+	letter-spacing: 3.33px;
+}
+
+.bigPanic {
+	color: #fe0b56;
+	background-color: #eee;
+	font-size: 1.5em;
+	letter-spacing: 3.33px;
+	font-weight: 900;
+	text-decoration: underline;
+	border-radius: 3.33%;	
+}
+
+
+
+
 		body.is-article-visible #footer {
 			-moz-transform: scale(0.95);
 			-webkit-transform: scale(0.95);
