--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1464,10 +1464,9 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endCo
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
-			background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), 
-			linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+			background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
  			background-blend-mode: multiply;
-			border-radius: 4px;
+			border-radius: 5px;
 			opacity: 0;
 			height: 100%;
 		}
